styles/blogPost.css
.post-heading {
    background-color: #E6F3E2;
    padding: 12px 5px;
    border: 1px solid #e3e3e3;
}

.post-heading h1 {
    margin: 0;
}

.pointer-cursor a {
    cursor: pointer;
}


.tab-to-archive-main {
  /*min-width: 320px;
  max-width: 800px;*/
  margin: 0 auto;
}
    .tab-to-archive-main input {
        display: none;
    }

    .tab-content {
        display: none;
        padding: 8px 0 0;
    }

#recentTab:checked ~ #recentBlogs,
#archiveTab:checked ~ #archivedBlogs {
  display: block;
}

    .tab-to-archive-main label {
        display: inline-block;
        padding: 15px 40px;
        font-weight: 600;
        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
        text-align: center;
        color: #bbb;
    }

    .tab-to-archive-main label:before {
        font-weight: normal;
        margin-right: 10px;
    }

.tab-to-archive-main label[for*='1']:before { content: '\f1cb'; }
.tab-to-archive-main label[for*='2']:before { content: '\f17d'; }
.tab-to-archive-main label[for*='3']:before { content: '\f16b'; }
.tab-to-archive-main label[for*='4']:before { content: '\f1a9'; }

.tab-to-archive-main label:hover {
  color: #888;
  cursor: pointer;
}

.tab-to-archive-main input:checked + label {
  color: #555;
  border-top: 2px solid #E6F3E2;
  border-bottom: 2px solid #E6F3E2;
}

